src/test/ui/issues/issue-42954.stderr
error: `<` is interpreted as a start of generic arguments for `u32`, not a comparison
  --> $DIR/issue-42954.rs:7:19
   |
LL |         $i as u32 < 0
   |         --------- ^ - interpreted as generic arguments
   |         |         |
   |         |         not interpreted as comparison
   |         help: try comparing the cast value: `($i as u32)`
...
LL |     is_plainly_printable!(c);
   |     ------------------------- in this macro invocation

error: aborting due to previous error

